[project]
name = "leetcode-030626"
version = "0.1.0"
description = "LeetCode training 2026"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
